[metadata]
name = ffms
version = 0.2a1
summary = Bindings for FFmpegSource
description_file = README.rst
home_page = https://bitbucket.org/spirit/ffms
download_url = https://bitbucket.org/spirit/ffms/downloads
author = spirit
author_email = hiddenspirit@gmail.com
classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
requires_dist = numpy
    pywin32; sys.platform == 'win32'
requires_external = libffms2-2
requires_python = >=2.7,!=3.0,!=3.1

[files]
packages = ffms
extra_files = COPYING
    COPYING.LESSER
    README.rst
    test/x264.mkv
    test.py
    ffmsinfo.py
    setup.py
