[global]
setup_hooks =
    setup_ffms.hook
    setup.default_hook

[metadata]
name = ffms
version = 0.2a4
summary = Bindings for FFmpegSource
description-file = README.rst
home-page = https://bitbucket.org/spirit/ffms
download-url = https://bitbucket.org/spirit/ffms/downloads
author = spirit
author-email = hiddenspirit@gmail.com
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
requires-dist =
    numpy
    pywin32; sys.platform == 'win32'
requires-external = libffms2-2
requires-python = >=2.7,!=3.0,!=3.1

[files]
packages = ffms
extra_files =
    COPYING
    COPYING.LESSER
    ffmsinfo.py
    README.rst
    setup.py
    setup_ffms.py
    test.py
    test/x264.mkv
